<resources>
    <string name="app_name">Inequal</string>
    <string name="play_menu_item">Play Game</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="logo_text"><![CDATA[<>]]></string>
    <string name="left_symbol"><![CDATA[<]]></string>
    <string name="right_symbol"><![CDATA[>]]></string>
    <string name="game_over">Game Over</string>
    <string name="twitter_prompt">Post Score to Twitter</string>
    <string name="username_prompt">Welcome, start by adding a name</string>
    <string name="submit_btn_txt">submit</string>

    <!--Game Strings-->
    <string name="game_heading_str_template">%1$s\n%2$s</string>
    <string name="tweet">Tweet</string>

    <!--Twitter Strings-->
    <string name="def_prompt">%1$s just scored %2$s at %3$s in Inequal!</string>
    <string name="tweet_successful">Tweet Successful!</string>
    <string name="rules">Rules</string>
    <string name="about_inequal">Inequal is a fast paced math puzzle game which aims to sharpen your quick thinking skills. Inequalities are standard concepts taught to school children from years 7 to 9. For many students, inequalities can be a challenging concept to grasp, however a few hours playing Inequal will see their skills increase dramatically!</string>
    <string name="Rules">The rules are simple, try to correctly evaluate the equality. Each round will have three numbers displayed on the screen; two located on either side of the screen and one in the center. The center number is the target number, the aim is to correctly select the inequality which is correct by either swiping the screen or waving the phone in the correct direction (see Gameplay section). There are three options, left if the left inequality satifies, right if the right inequality satisfies, or neither if none of the inequalities satisfy. Scores will be allocated for every correcr answer. You are encouraged to try and get as many inequalities correct in a row and a larger streak will result in more points being earned. You have a 30 second time limit per round, at the end of the round you will see a Game Over screen and your score will be reocorded.</string>
    <string name="rules_gameplay">Inequal has two gameplay modes which allows you to choose how you want to select the numebrs. You can use the accelerometer (by waving the device left and right) or swiping gestures. You can select between these in the Settings menu.</string>
    <string name="home">Home</string>
    <string name="rules_gameplay_heading">Gameplay</string>
    <string name="high_scores_top_players">Top Players</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="user_name_hint">MyName</string>
    <string name="set_name">Set Name</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="swipe_gesture">Swipe Gesture</string>
</resources>
