<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context="com.hazup.isochoric.greaterorlessthan.controller.ViewRulesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="About"
                style="@style/standard_game_text_size"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView"
                style="@style/regular_app_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_inequal"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Rules"
                style="@style/standard_game_text_size"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regular_app_font"
                android:text="@string/Rules"
                android:textAlignment="center"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules_gameplay_heading"
                style="@style/standard_game_text_size"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regular_app_font"
                android:text="@string/rules_gameplay"
                android:textAlignment="center"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
