<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hazup.isochoric.greaterorlessthan.controller.GameScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingTop="30dp"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/points_text_view"
            style="@style/standard_game_text_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/player_name_text_view"
            style="@style/standard_game_text_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/time_text_view"
            style="@style/standard_game_text_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/left_number_textview"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView"
            style="@style/surround_number_style"
            android:layout_marginLeft="20dp"
            android:gravity="start"/>

        <TextView
            android:id="@+id/right_number_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginRight="20dp"
            android:gravity="end"
            style="@style/surround_number_style" />

    </LinearLayout>

    <TextView
        android:id="@+id/target_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        style="@style/target_number_style"
        android:layout_marginTop="20dp"
        android:gravity="center"/>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/game_over_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:weightSum="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textStyle="bold"
            android:text="@string/game_over"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/twitter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter_prompt"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/game_screen_home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>
